Pylient not working

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
   pre_build:
     commands:
       - python --version
-      - pylint $CODEBUILD_SRC_DIR/*.py
+      - pylint $CODEBUILD_SRC_DIR/*.py --errors-only
       #- pylint $CODEBUILD_SRC_DIR/job-portal/*.py --errors-only
 artifacts:
   files:
